# powerbi-mcp

./: .gitignore  README.md
.claude/: settings.local.json
bimcp/: .env.example  README.md  README_FOR_ANALYSTS.md  mcp_check.py  requirements.txt  server.py
bimcp/doc/: guide.md
bimcp/src/context/: live_context.py  live_guard.py  live_model_reader.py  live_writer.py  manager.py  ps_adomd_bridge.py  ps_live_context.py
bimcp/src/discovery/: port_finder.py
bimcp/src/tmdl/: models.py  parser.py  writer.py
bimcp/src/tools/: _live.py  calendar_tools.py  column_tools.py  culture_tools.py  dax_tools.py  desktop_tools.py  measure_tools.py  model_tools.py  relationship_tools.py  role_tools.py  table_tools.py  udf_tools.py
bimcp/tests/: test_phase2.py  test_phase3.py  test_phase4.py
doc/: architecture-plan.md  progress.txt
temp1/bimcp/: README.md  pyproject.toml  server.py
temp1/bimcp/src/context/: ps_adomd_bridge.py  ps_live_context.py
temp1/bimcp/src/discovery/: port_finder.py
temp1/bimcp/src/prompts/: connection_prompts.py
temp1/bimcp/src/resources/: provider.py
temp1/bimcp/src/tmdl/: models.py  parser.py  path_resolver.py  writer.py
temp1/bimcp/src/tools/: calendar_tools.py  column_tools.py  culture_tools.py  relationship_tools.py  table_tools.py  udf_tools.py
temp1/bimcp/tests/: live_test.py  test_phase1.py  test_phase2.py
temp1/bimcp/tests/fixtures/TestModel.SemanticModel/definition/: database.tmdl  relationships.tmdl
temp1/bimcp/tests/fixtures/xmla/: execute_rowset_response.xml
temp1/doc/: architecture-plan.md
(+5 files in other folders)
