[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerbi-local-mcp"
version = "0.1.0"
description = "Universal local MCP server for Power BI modeling (Phase 1 — Foundation & Resources)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
powerbi-mcp = "server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
